--- a/Readability Score/Words and sentences/task-info.yaml
+++ b/Readability Score/Words and sentences/task-info.yaml
@@ -57,5 +57,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5263#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 15 Mar 2022 18:25:03 UTC
 record: -1
