--- a/Readability Score/Score/task-info.yaml
+++ b/Readability Score/Score/task-info.yaml
@@ -212,5 +212,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5264#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 15 Mar 2022 18:29:24 UTC
 record: -1
