--- a/Readability Score/More parameters/task-info.yaml
+++ b/Readability Score/More parameters/task-info.yaml
@@ -426,5 +426,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5265#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Tue, 15 Mar 2022 18:44:08 UTC
 record: -1
